added token creation and registration methods for auth-service with spring security configuration Implemented createToken and registration methods in auth-service, including comprehensive SpringSecurity configuration, configured api-gateway to handle requests to auth-service.

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -16,3 +16,7 @@ spring:
           uri: http://localhost:8080
           predicates:
             - Path=/books/**
+        - id: auth
+          uri: http://localhost:8082
+          predicates:
+            - Path=/auth/**
