--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -6,6 +6,8 @@ jwt:
   lifetime: 30m
 
 spring:
+  application:
+    name: auth-service
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/library_test_auth
