--- a/library-service/src/main/resources/application.yml
+++ b/library-service/src/main/resources/application.yml
@@ -1,7 +1,9 @@
 server:
-  port: 8081
+  port: 8083
 
 spring:
+  application:
+    name: library-service
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/library_test1
